my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ERECUR/ERECUR.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ERECUR.dml:22:5: In rec2
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ERECUR.dml:17:5: error ERECUR: recursive inline of rec2
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ERECUR.dml:11:5: In rec
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_ERECUR.dml:11:5: error ERECUR: recursive inline of rec
